add css styling to page.

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,17 @@
   <title>Document</title>
 </head>
 <body>
+  
   <h1>Welcome to the Tavern hit the button and play cocktail roulette!</h1>
-  <button id="randomCocktail">Click here to see a random cocktail!</button>
+  <button class="btn btn-danger" id="randomCocktail">Click here to see a random cocktail!</button>
+  <div class="jumbotron">
   <h3 id="cocktailName"></h3>
   <div id="cocktailReturn">
+    
     <ul>
 
     </ul>
+    </div>
   </div> 
 </body>
 </html>
