update README.md, add css styling to page.

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Cocktail Roulette</title>
 </head>
 <body>
   
-  <h1>Welcome to the Tavern hit the button and play cocktail roulette!</h1>
+  <h1>Welcome to the Tavern!</h1>
+  <h3>Press the button to play cocktail roulette!</h3>
+
   <button class="btn btn-danger" id="randomCocktail">Click here to see a random cocktail!</button>
   <div class="jumbotron">
   <h3 id="cocktailName"></h3>
